<resources>
    <string name="game_view_content_description">Game view</string>

    <string name="app_name">Joyshare</string>
    <string name="ok_button">Ok</string>
    <string name="cancel_button">Cancel</string>
    <string name="add_friend_button">Add Friend</string>
    <string name="add_friend_dialog">Add Friend By Email:</string>
    <string name="normal_dialog_fragment">normal_dialog_fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="send_gift_title">Make \nSomeone\'s Day</string>
    <string name="send_gift_subtitle">Send a gift</string>
    <string name="no_gifts_title">No gifts yet?</string>
    <string name="no_gifts">You know what they say: the best gift is being able to give to others. Send one today!</string>
    <string name="uploading">Uploading new gift...</string>

    <string name="pick_from_gallery">Pick from Gallery</string>

    <string name="sent_gifts_title">Sent</string>
    <string name="received_gifts_title">Received</string>
    <string name="friends_list_title">Friends</string>
    <string name="requests_list_title">Friend Requests</string>
    <string name="user_search">Search for friend by name or by email</string>
    <string name="to">To:</string>
    <string name="from">From:</string>
    <string name="no_recipient">Nobody yet!</string>

    <string name="remove_button">Remove</string>

    <!-- Create Gift stuff -->
    <string name="required">(Required)</string>
    <string name="review_button">Review</string>
    <string name="create_gift_title">Create Gift</string>
    <string name="links">Links:</string>
    <string name="add">Add:</string>
    <plurals name="has_media_items">
        <item quantity="one">This gift has %1$d media file.</item>
        <item quantity="other">This gift has %1$d media files.</item>
    </plurals>
</resources>