<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            style="@style/plainCard"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/card_gradient_yellow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView">

            <TextView
                android:id="@+id/newGiftTitle"
                style="@style/header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/send_gift_title"
                app:layout_constraintEnd_toStartOf="@+id/presentImg"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/create_gift_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:text="@string/send_gift_subtitle"
                app:cornerRadius="13dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/newGiftTitle" />

            <ImageView
                android:id="@+id/presentImg"
                android:layout_width="70dp"
                android:layout_height="90dp"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/newGiftTitle"
                app:srcCompat="@drawable/gift_pink" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/refresh_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="REFRESH"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraintLayout" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sentGifts"
            style="@style/plainCard"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/refresh_button">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/col2Guide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp"
                app:layout_constraintGuide_percent="0.6" />

            <TextView
                android:id="@+id/sentGiftsTitle"
                style="@style/header2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sent_gifts_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sentGiftsTo"
                style="@style/header3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"
                app:layout_constraintBottom_toBottomOf="@+id/sentGiftsTitle"
                app:layout_constraintStart_toStartOf="@id/col2Guide" />

            <ListView
                android:id="@+id/inbox_gifts_sent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:text="You haven't sent any gifts yet"
                app:layout_constraintTop_toBottomOf="@id/sentGiftsTitle"
                tools:layout_editor_absoluteX="10dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/recGifts"
            style="@style/plainCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:backgroundTint="@color/pink"
            android:backgroundTintMode="multiply"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sentGifts">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/col2Guide2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp"
                app:layout_constraintGuide_percent="0.6" />

            <TextView
                android:id="@+id/recGiftsTitle"
                style="@style/header2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/received_gifts_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/recGiftsFrom"
                style="@style/header3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from"
                app:layout_constraintBottom_toBottomOf="@+id/recGiftsTitle"
                app:layout_constraintStart_toStartOf="@id/col2Guide2" />

            <ListView
                android:id="@+id/inbox_gifts_recieved"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="You have no unopened gifts"
                app:layout_constraintTop_toBottomOf="@id/recGiftsTitle"
                tools:layout_editor_absoluteX="10dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
