<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/card_gradient_yellow">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--RECIPIENT-->

        <ImageView
            android:id="@+id/giftImg"
            android:layout_width="112dp"
            android:layout_height="111dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:contentDescription="gift"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/gift_pink" />


        <TextView
            android:id="@+id/createGiftTitle"
            style="@style/title2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_gift_title"
            android:textColor="@color/blackish" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toCard"
            style="@style/plainCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp">

            <Button
                android:id="@+id/choose_recipient_button"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_below="@+id/recipient"
                android:padding="0dp"
                android:text="PICK"
                app:cornerRadius="13dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/toTitle"
                style="@style/header2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="To:"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/recipient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/no_recipient"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/toTitle"
                app:layout_constraintStart_toEndOf="@+id/toTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/spinnerCard"
            style="@style/plainCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/pink"
            android:paddingTop="6dp"
            android:paddingBottom="6dp">

            <TextView
                android:id="@+id/spinnerTitle"
                style="@style/header2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="What\'s the Occasion?"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/gift_type_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="6dp"
                android:padding="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spinnerTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/msgCard"
            style="@style/plainCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp">

            <TextView
                android:id="@+id/messageTitle"
                style="@style/header2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Message:"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/message_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/required"
                android:imeOptions="actionDone"
                android:inputType="text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/messageTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--MESSAGE BOX-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linkCard"
            style="@style/plainCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/pink"
            android:visibility="visible">

            <TextView
                android:id="@+id/linkTitle"
                style="@style/header2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/links"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ListView
                android:id="@+id/linkList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linkTitle" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mediaCard"
            style="@style/plainCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="476dp">

            <ImageView
                android:id="@+id/picIcon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/pic" />

            <TextView
                android:id="@+id/review_label"
                style="@style/header3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/media_added"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/picIcon"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/review_contents_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/review_button"
                app:cornerRadius="13dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/picIcon"
                app:layout_constraintTop_toBottomOf="@+id/review_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/editButtons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/video_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/circle_button"
                android:elevation="4dp"
                android:padding="8dp"
                android:scaleType="centerInside"
                app:layout_constraintEnd_toStartOf="@+id/image_button"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/vid_icon"
                tools:scaleType="centerInside" />

            <ImageButton
                android:id="@+id/image_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/circle_button"
                android:elevation="4dp"
                android:padding="8dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toStartOf="@+id/link_button"
                app:layout_constraintStart_toEndOf="@+id/video_button"
                app:layout_constraintTop_toTopOf="@+id/video_button"
                app:srcCompat="@drawable/pic_icon" />

            <ImageButton
                android:id="@+id/link_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/circle_button"
                android:elevation="4dp"
                android:padding="8dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_button"
                app:layout_constraintTop_toTopOf="@+id/video_button"
                app:srcCompat="@drawable/link_icon" />

            <Button
                android:id="@+id/send_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="SEND GIFT"
                app:cornerRadius="13dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/video_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"
            android:text="CLOSE"
            app:cornerRadius="13dp" />

    </LinearLayout>
</ScrollView>